feat: implement core backend services and controllers for user authentication, cart management, and Razorpay order processing